--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1"
   }
