--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cssweng-gabay",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,11 +13,13 @@
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^5.0.0",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
+    "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "multer": "^1.4.5-lts.1"
-  }
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2"
+  },
+  "description": ""
 }
