--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "connect-mongodb-session": "^5.0.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
@@ -18,7 +19,6 @@
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2"
   },
   "description": ""
