--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.3",
     "cloudinary": "^2.2.0",
     "connect-mongodb-session": "^5.0.0",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
