--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.3",
+    "mongoose": "^8.5.0",
     "multer-gridfs-storage": "^5.0.2"
   },
-  "description": ""
+  "description": "For Project Structure, HTML, CSS, JavaScript, and UML Diagrams."
 }
