--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.5.0",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.14"
   },
   "description": "For Project Structure, HTML, CSS, JavaScript, and UML Diagrams."
 }
